2006-09-02  Michael Stucki  <michael@typo3.org>

	* Changed path to help image if no CODE was given
	* Fixed manual.sxw which was broken in SVN (but not in TER)

2004-08-09  Andreas Otto  <andreas.otto@dkd.de>

	* Added the TYPO3_version flag.
	* Created TYPO3_3_5_0 branch for 3.5.0 backwards compatibility.
