@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "tipafriend"
 #
-# Auto generated 01-09-2006 23:53
+# Auto generated 02-09-2006 14:52
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Makes a link to a page where a mail form allows the user to send the link to the former page to some recipient email address. Mails can be HTML or plain text',
 	'category' => 'plugin',
 	'shy' => 0,
-	'dependencies' => '',
+	'dependencies' => 'cms',
 	'conflicts' => '',
 	'priority' => '',
 	'loadOrder' => '',
@@ -26,12 +26,12 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => '',
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
-	'author' => 'Kasper Skårhøj',
+	'author' => 'Kasper Skaarhoj',
 	'author_email' => 'kasperYYYY@typo3.com',
 	'author_company' => 'Curby Soft Multimedia',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
-	'version' => '1.2.1',
+	'version' => '1.2.2',
 	'constraints' => array(
 		'depends' => array(
 			'typo3' => '3.0.0-',
@@ -43,7 +43,9 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:19:{s:24:".#ext_emconf.php.1.1.1.1";s:4:"fe1a";s:9:"ChangeLog";s:4:"668e";s:12:"ext_icon.gif";s:4:"3b63";s:14:"ext_tables.php";s:4:"4637";s:28:"ext_typoscript_constants.txt";s:4:"0381";s:24:"ext_typoscript_setup.txt";s:4:"e728";s:13:"locallang.php";s:4:"11b4";s:11:"CVS/Entries";s:4:"8f45";s:14:"CVS/Repository";s:4:"9ed0";s:8:"CVS/Root";s:4:"bbeb";s:26:"pi/class.tx_tipafriend.php";s:4:"61a8";s:23:"pi/tipafriend_help.tmpl";s:4:"6790";s:23:"pi/tipafriend_help1.gif";s:4:"3016";s:27:"pi/tipafriend_template.tmpl";s:4:"dfca";s:30:"pi/tipafriend_template_dk.tmpl";s:4:"2d3d";s:14:"pi/CVS/Entries";s:4:"d063";s:17:"pi/CVS/Repository";s:4:"a8a9";s:11:"pi/CVS/Root";s:4:"bbeb";s:14:"doc/manual.sxw";s:4:"884f";}',
+	'_md5_values_when_last_written' => 'a:12:{s:9:"ChangeLog";s:4:"4124";s:12:"ext_icon.gif";s:4:"3b63";s:14:"ext_tables.php";s:4:"4637";s:28:"ext_typoscript_constants.txt";s:4:"0381";s:24:"ext_typoscript_setup.txt";s:4:"e728";s:13:"locallang.php";s:4:"11b4";s:26:"pi/class.tx_tipafriend.php";s:4:"f22a";s:22:"pi/tipafriend_help.gif";s:4:"3016";s:23:"pi/tipafriend_help.tmpl";s:4:"5a14";s:27:"pi/tipafriend_template.tmpl";s:4:"dfca";s:30:"pi/tipafriend_template_dk.tmpl";s:4:"2d3d";s:14:"doc/manual.sxw";s:4:"884f";}',
+	'suggests' => array(
+	),
 );
 
 ?>
